--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ provide outstanding, clean code in a collaborative environment.</p>
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <!-- <section id="services" class="services">
       <div class="container">
 
         <div class="section-title">
@@ -558,7 +558,8 @@ provide outstanding, clean code in a collaborative environment.</p>
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section> -->
+    <!-- End Services Section -->
 
 
 
