--- a/justlo-details.html
+++ b/justlo-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
+  <title>Portfolio Details</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -94,13 +94,52 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/justlo/j1.png" alt="" >
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/justlo/j2.png" alt="" >
+                  <img src="assets/img/portfolio/justlo/2_just-d-1.png" alt="" >
                 </div>
 
-  
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/justlo/3_just-d-2.png" alt="" >
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/justlo/4_just-d-3.png" alt="" >
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/justlo/5_just-d-4.png" alt="" >
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/justlo/6_just-d-5.png" alt="" >
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/justlo/7_just-d-6.png" alt="" >
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/justlo/8_just-d-7.png" alt="" >
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/justlo/9_just-d-8.png" alt="" >
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/justlo/10_just-d-9.png" alt="" >
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/justlo/11_just-d-10.png" alt="" >
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/justlo/12_just-d-11.png" alt="" >
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/justlo/13_just-d-12.png" alt="" >
+                </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -119,7 +158,7 @@
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                JustL is ultimate social app for connecting, sharing, and making meaningful connections with friends and like-minded people. Discover a world of possibilities and enhance your social life with JustL!
+                Justlo is ultimate social app for connecting, sharing, and making meaningful connections with friends and like-minded people. Discover a world of possibilities and enhance your social life with Justlo!
               </p>
             </div>
           </div>
