--- a/mava-detail.html
+++ b/mava-detail.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details</title>
+  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -27,7 +27,13 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-
+  <!-- =======================================================
+  * Template Name: iPortfolio
+  * Updated: Jul 27 2023 with Bootstrap v5.3.1
+  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
 </head>
 
 <body>
@@ -67,7 +73,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details</h2>
+          <h2>Mava health Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Portfoio Details</li>
@@ -88,30 +94,22 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/edtutor/st-entry-d.png" alt="" >
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/edtutor/home-banner.png" alt="" >
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/edtutor/snapd.png" alt="" >
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/edtutor/st-test-d.png" alt="" >
-                </div>
-
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/edtutor/mcq.png" alt="" >
+                  <img src="assets/img/portfolio/mava/mava-d-1.png" alt="" >
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/edtutor/mcq-d.png" alt="" >
+                  <img src="assets/img/portfolio/mava/mava-d-2.png" alt="" >
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/edtutor/st-snp-d.png" alt="" >
+                  <img src="assets/img/portfolio/mava/mava-d-3.png" alt="" >
                 </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/mava/mava-d-4.png" alt="" >
+                </div>
+                 
+                 
 
               </div>
               <div class="swiper-pagination"></div>
@@ -120,17 +118,17 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Edutor</h3>
+              <h3>Mava health</h3>
               <ul>
-                <li><strong>Category</strong>: Education</li>
-                <li><strong>Client</strong>: Edtech</li>
-                <li><strong>Project URL</strong>: <a href="https://play.google.com/store/apps/details?id=com.edtech.edtutor">Edutor</a></li>
+                <li><strong>Category</strong>: Health</li>
+                <li><strong>Company</strong>: Eurosofttech</li>
+                <li><strong>Project URL</strong>: <a href="" target="_blank">Mava health</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                Edtutor Android app duo, designed to reshape education through the power of technology. This tandem consists of a dedicated student app and a complementary parent app, collectively amassing over 100k downloads, showcasing their popularity and impact within the education community.
+                Mava Health connects patients and doctors seamlessly, offering a one-stop solution for healthcare needs. Patients can effortlessly schedule appointments with nearby doctors, access their profiles, and book in-person or video appointments. Meanwhile, doctors can efficiently diagnose and treat patients through secure video calls, ensuring accessible and convenient healthcare for all.
               </p>
             </div>
           </div>
