--- a/index.html
+++ b/index.html
@@ -403,8 +403,18 @@ provide outstanding, clean code in a collaborative environment.</p>
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/mava/mava-main1.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/mava/mava-main1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/mava/mava-main1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Mava-health"><i class="bx bx-plus"></i></a>
                 <a href="mava-detail.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/travelo/5_travelo-main-1.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/travelo/5_travelo-main-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Travelo"><i class="bx bx-plus"></i></a>
+                <a href="trevelo.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
