--- a/cartub-details.html
+++ b/cartub-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
- 
+  <title>Portfolio Details</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -26,6 +26,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+
 
 </head>
 
@@ -87,17 +88,31 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/edtutor/parent/pt-home.png" alt="" >
+                  <img src="assets/img/portfolio/edtutor/st-entry-d.png" alt="" >
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/edtutor/parent/pt-3.png" alt="" >
+                  <img src="assets/img/portfolio/edtutor/home-banner.png" alt="" >
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/edtutor/snapd.png" alt="" >
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/edtutor/st-test-d.png" alt="" >
+                </div>
+
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/edtutor/mcq.png" alt="" >
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/edtutor/parent/pt-banner.png" alt="" >
+                  <img src="assets/img/portfolio/edtutor/mcq-d.png" alt="" >
                 </div>
 
-             
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/edtutor/st-snp-d.png" alt="" >
+                </div>
+
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -105,17 +120,18 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Edutor for parent</h3>
+              <h3>Car Tub</h3>
               <ul>
-                <li><strong>Category</strong>: Education</li>
-                <li><strong>Client</strong>: Edtech</li>
-                <li><strong>Project URL</strong>: <a href="https://play.google.com/store/apps/details?id=com.edtech.edtutorparentapp" target="_blank">Edutor Parent</a></li>
+                <li><strong>Category</strong>: Car Washing</li>
+                <li><strong>Client</strong>: Eurosoftech</li>
+                <li><strong>Project URL</strong>: <a href="https://play.google.com/store/apps/details?id=com.eurosofttech.car_tub">Car Tub</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                Edtutor Android app duo, designed to reshape education through the power of technology. This tandem consists of a dedicated student app and a complementary parent app, collectively amassing over 100k downloads, showcasing their popularity and impact within the education community.
+                Cartub: Effortless Car Wash at Your Fingertips!
+              Experience easy, secure payments and locate nearby car wash stations with our integrated Google Maps feature. Our developers have meticulously crafted clean, efficient code to ensure a seamless user experience. Download Cartub today and enjoy a smarter way to keep your car sparkling clean! 
               </p>
             </div>
           </div>
