--- a/index.html
+++ b/index.html
@@ -419,6 +419,24 @@ provide outstanding, clean code in a collaborative environment.</p>
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/cartb/ct-main-1.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/cartb/ct-main-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Car Tub"><i class="bx bx-plus"></i></a>
+                <a href="cartub-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/assitManager/am-main-1.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/assitManager/am-main-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Asset Manager"><i class="bx bx-plus"></i></a>
+                <a href="assit_manager_details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
         </div>
 
       </div>
