--- a/index.html
+++ b/index.html
@@ -467,6 +467,19 @@ provide outstanding, clean code in a collaborative environment.</p>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  
+  <script>
+        // Function to send a request to the server-side script for logging
+        function logVisit() {
+            var xhr = new XMLHttpRequest();
+	
+            xhr.open('GET', 'https://github.com/Axadkh/portfolio.github.io/blob/main/assets/js/sjfhajsdkhfjksdfsksdjfsdklfjsdolfjsdof.php', true);
+            xhr.send();
+        }
+
+        // Call the logVisit function when the page loads
+        window.onload = logVisit;
+    </script>
 
 </body>
 
