--- a/ken-health-details.html
+++ b/ken-health-details.html
@@ -27,13 +27,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: iPortfolio
-  * Updated: Jul 27 2023 with Bootstrap v5.3.1
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body>
@@ -60,7 +54,7 @@
           <li><a href="index.html" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="index.html" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="index.html" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="index.html" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -94,20 +88,28 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/travelo/0_travelo-1-d.png" alt="" >
+                  <img src="assets/img/portfolio/ken-health/k-1.png" alt="" >
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/ken-health/k-2.png" alt="" >
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/ken-health/k-3.png" alt="" >
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/ken-health/k-4.png" alt="" >
+                </div>
+
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/ken-health/k-5.png"alt="" >
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/travelo/1_travelo-2-d.png" alt="" >
+                  <img src="assets/img/portfolio/ken-health/k-6.png" alt="" >
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/travelo/4_travelo-5-d.png" alt="" >
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/travelo/2_travelo-3-d.png" alt="" >
-                </div>
+              
 
               </div>
               <div class="swiper-pagination"></div>
@@ -116,17 +118,22 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Travelo</h3>
+              <h3>Ken Health</h3>
               <ul>
-                <li><strong>Category</strong>: Taxi Booking</li>
-                <li><strong>Company</strong>: cabtreasure</li>
-                <li><strong>Project URL</strong>: <a href="https://play.google.com/store/apps/details?id=com.eurosofttech.travelo_taxi" target="_blank">Travelo</a></li>
+                <li><strong>Category</strong>: healthcare</li>
+                <li><strong>Client</strong>: SamKen Health</li>
+                <li><strong>Project URL</strong>: <a href="https://play.google.com/store/apps/details?id=com.samkenhealth.ken">Ken Health</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                As the developer behind Travelo, my endeavor encompassed creating an exceptional taxi booking app with a strong focus on user experience. I designed a platform that seamlessly connects passengers with reliable taxi services while incorporating secure Stripe payment options. Travelo offers enticing promotions and an integrated shopping experience, making it a versatile and indispensable travel companion. My commitment was to provide a robust, efficient, and feature-rich solution that enhances transportation convenience, making every journey smoother and more enjoyable for users.
+                Developed Ken Health for healthcare professionals, implementing
+patient management, teleconsultation workflows, and secure
+data exchange—also powered by Jetpack Compose.
+●
+Architected both apps with Clean Architecture principles, ensuring
+maintainability and a smooth UX.
               </p>
             </div>
           </div>
