--- a/cartub-details.html
+++ b/cartub-details.html
@@ -43,8 +43,8 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Asad ullah</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://github.com/Axadkh" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-          <a href="https://www.linkedin.com/in/asadkhan103/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/asad-appdev" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/asad-appdev/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -87,31 +87,19 @@
             <div class="portfolio-details-slider swiper" >
               <div class="swiper-wrapper align-items-center">
 
+                
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/edtutor/st-entry-d.png" alt="" >
+                   <img src="assets/img/portfolio/cartb/ct-d-1.png" alt="" >
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/edtutor/home-banner.png" alt="" >
+                    <img src="assets/img/portfolio/cartb/ct-d-2.png" alt="" >
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/edtutor/snapd.png" alt="" >
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/edtutor/st-test-d.png" alt="" >
+                    <img src="assets/img/portfolio/cartb/ct-d-3.png" alt="" >
                 </div>
 
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/edtutor/mcq.png" alt="" >
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/edtutor/mcq-d.png" alt="" >
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/edtutor/st-snp-d.png" alt="" >
-                </div>
+                
 
               </div>
               <div class="swiper-pagination"></div>
